# dynamic-workflows-for-Codex

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.agents/plugins/: marketplace.json
docs/: consumer-install.md  evaluation.md
docs/superpowers/plans/: 2026-06-04-codex-dynamic-workflows.md  2026-06-05-dynamic-workflows-for-Codex-v0.2.md  2026-06-05-dynamic-workflows-for-Codex-v0.3-hardening.md  2026-06-05-dynamic-workflows-for-Codex-v0.4-live-execution.md  2026-06-05-dynamic-workflows-for-Codex-v0.5-live-execute-contract.md  2026-06-06-dynamic-workflows-for-Codex-v0.5-doctor.md  2026-06-06-dynamic-workflows-for-Codex-v0.6-procedure-graph.md  2026-06-06-dynamic-workflows-for-Codex-v0.6-runtime-procedure-execution.md  2026-06-06-dynamic-workflows-for-Codex-v0.7-plugin-skill-hardening.md  (+10 more)
src/cdw/: __main__.py  artifacts.py  bootstrap.py  boundaries.py  cli.py  codex_cli.py  codex_command.py  codex_mcp.py  config.py  doctor.py  dynamic_planner.py  live_smoke.py  planner.py  plugin_package.py  resume.py  run_status.py  runtime.py  schemas.py  skill.py  state.py  workflow_spec.py  write_drafts.py
src/cdw/prompts/: debugger.md  planner.md  (+3 more)
tests/: test_artifacts.py  test_bootstrap.py  test_boundaries.py  test_cli.py  test_codex_cli.py  test_codex_command.py  test_codex_mcp.py  test_doctor.py  test_dynamic_planner.py  test_live_smoke.py  test_migrate.py  test_planner.py  test_plugin_package.py  test_resume.py  test_run_status.py  test_runtime.py  test_schemas.py  test_skill.py  test_state.py  test_workflow_spec.py  test_write_drafts.py
(+21 files in other folders)
